kubernetes/flagger/canaries/catalogue/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  labels:
    name: catalogue
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: catalogue
  template:
    metadata:
      labels:
        name: catalogue
    spec:
      containers:
        - name: catalogue
          image: europe-west3-docker.pkg.dev/privacy-with-canary/sock-shop/catalogue:1.0.0 # {"$imagepolicy": "flux-system:catalogue"}
          command: ["/app"]
          args:
            - -port=80
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 80
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop:
                - all
              add:
                - NET_BIND_SERVICE
            readOnlyRootFilesystem: true
#          livenessProbe:
#            httpGet:
#              path: /health
#              port: 80
#            initialDelaySeconds: 300
#            periodSeconds: 3
#          readinessProbe:
#            httpGet:
#              path: /health
#              port: 80
#            initialDelaySeconds: 180
#            periodSeconds: 3
      nodeSelector:
        kubernetes.io/os: linux
