kubernetes/flagger/canaries/catalogue/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: catalogue
  namespace: sock-shop
spec:
  host: catalogue.sock-shop.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
